--- a/movies_admin/src/nginx.conf
+++ b/movies_admin/src/nginx.conf
@@ -7,6 +7,7 @@ events {
 http {
   include       /etc/nginx/mime.types;
   include conf.d/*.conf;
+  server_tokens off;
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
